--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/server": "^11.10.0",
+    "@mantine/carousel": "^5.0.2",
+    "@mantine/core": "^5.0.2",
+    "@mantine/hooks": "^5.0.2",
+    "@mantine/next": "^5.0.2",
+    "@mantine/notifications": "^5.0.2",
+    "@mantine/nprogress": "^5.0.2",
+    "@tabler/icons": "^1.78.1",
+    "embla-carousel-react": "^7.0.0",
+    "firebase": "^9.9.2",
+    "firebase-admin": "^11.0.1",
     "next": "12.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "recoil": "^0.7.4"
   },
   "devDependencies": {
     "@types/node": "18.6.4",
