--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recoil": "^0.7.4"
+    "recoil": "^0.7.4",
+    "slug": "^8.0.0"
   },
   "devDependencies": {
     "@types/node": "18.6.4",
