--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@mantine/notifications": "^5.0.2",
     "@mantine/nprogress": "^5.0.2",
     "@tabler/icons": "^1.78.1",
+    "@tanstack/react-query": "^4.3.4",
+    "@tanstack/react-query-devtools": "^4.3.5",
+    "axios": "^0.27.2",
     "embla-carousel-react": "^7.0.0",
     "firebase": "^9.9.2",
     "firebase-admin": "^11.0.1",
@@ -33,6 +36,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
+    "eslint-config-prettier": "^8.5.0",
     "typescript": "4.7.4"
   }
 }
