--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     "firebase": "^9.9.2",
     "firebase-admin": "^11.0.1",
     "next": "12.2.4",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recoil": "^0.7.4",
+    "recoil": "^0.7.5",
     "slug": "^8.0.0"
   },
   "devDependencies": {
