--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase": "^9.9.2",
     "firebase-admin": "^11.0.1",
     "next": "12.2.4",
+    "next-seo": "^5.5.0",
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
