--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "recoil": "^0.7.5",
+    "seamless-scroll-polyfill": "^2.2.0",
     "slug": "^8.0.0"
   },
   "devDependencies": {
