--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tabler/icons": "^1.78.1",
     "@tanstack/react-query": "^4.3.4",
     "@tanstack/react-query-devtools": "^4.3.5",
+    "@vercel/analytics": "^0.1.5",
     "axios": "^0.27.2",
     "embla-carousel-react": "^7.0.0",
     "firebase": "^9.9.2",
